v4.13.1 ??? ??? ???
  - Added the all_raise_py_exception argument to the %Module directive.
  - Added the /NoRaisesPyException/ function annotation.
  - Class templates now allow super-classes to be defined as template
    arguments.
  - Added support for 'public' preceding the name of a class in a super-class
    list.

v4.13 25th October 2011
  - Added the %DefaultDocstringFormat directive.
  - Added the format argument to the %Docstring directive.
  - %ConvertToSubClassCode can now cause a restart of the conversion process
    using a different requested type.
  - '*' and '&' are now supported as unary operators in expressions used in the
    values of default arguments.
  - The /Transfer/ annotation can now be used with the /Array/ annotation to
    prevent the freeing of the temporary array of pointers.

v4.12.4 2nd August 2011
  - PyLong_AsUnsignedLongMask() and PyLong_AsUnsignedLongLongMask() are now
    used in preference to PyLong_AsUnsignedLong() and
    PyLong_AsUnsignedLongLong().
  - The build system now supports Qt being built with the -qtlibinfix flag.

v4.12.3 22nd May 2011
  - A bug fix release.

v4.12.2 30th April 2011
  - /KeepReference/ is now supported as a function annotation.
  - Handwritten code in class templates no longer have the types substituted in
    lines that appear to contain C preprocessor directives.
  - Added support for global inplace numeric operators.

v4.12.1 22nd January 2011
  - Added support for the __getattribute__, __getattr__, __setattr__ and
    __delattr__ methods.
  - Added the /RaisesPyException/ function annotation.
  - Added SIP_SSIZE_T as a predefined type.
  - PyObject * can now be used as a synonym for SIP_PYOBJECT.
  - Added sip.ispycreated() to the sip module.
  - Added the --deployment-target flag to configure.py for MacOS/X.

v4.12 23rd December 2010
  - Implemented the revised directive syntax for %Module.
  - Deprecated %CModule, use %Module instead.